--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -1,46 +1,84 @@
 @font-face {
-    font-family: beba;
-    src: url('Fonts/BebasKai.ttf')
-      format('ttf');
-  }
-  
-  body {
-    font-family: "Bebas";
-    height: 100%;
-    width: 100%;
-    display: flex;
-    position: fixed;
-    align-items: center;
-    justify-content: center;
-    background-color: #000000;
-    text-align: center;
-    padding: 50px;
-  }
-  
-  button {
-    display: inline-block;
-    font-family: "Bebas";
-    background-color: WHITE;
-    border-radius: 45px;
-    border: 0px;
-    color: #000000;
-    text-align: center;
-    font-size: 12px;
-    padding: 12px;
-    width: 100px;
-    -webkit-transition: all 0.5s;
-    -moz-transition: all 0.5s;
-    -o-transition: all 0.5s;
-    transition: all 0.5s;
-    cursor: pointer;
-    margin: 5px;
-    text-decoration: none;
-  }
-  
-  button:hover {
-    background-color: rgb(152, 152, 152);
-    text-decoration: none;
-  }
+  font-family: "Bebas";
+  src: url("Fonts/BebasKai.ttf");
+}
 
+body {
+  font-family: "Bebas";
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  background-color: #000000;
+  text-align: center;
+  padding: 50px;
+}
 
-  
+button {
+  display: inline-block;
+  font-family: "Bebas";
+  background-color: WHITE;
+  border-radius: 45px;
+  border: 0px;
+  color: #000000;
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  width: 100px;
+  -webkit-transition: all 0.25s;
+  -moz-transition: all 0.25s;
+  -o-transition: all 0.25s;
+  transition: all 0.25s;
+  cursor: pointer;
+  margin: 5px;
+  text-decoration: none;
+}
+
+button:hover {
+  background-color: rgb(152, 152, 152);
+  text-decoration: none;
+}
+
+p {
+  font-family: "Bebas";
+  color: white;
+  font-size: calc(12pt + 10vw);
+  padding: 10px;
+}
+
+.splash_header {
+  font-family: "Bebas";
+  color: white;
+  font-size: clamp(40px, 4vw, 60px);
+  padding: 10px;
+  text-decoration: bold;
+}
+
+.container {
+  align-items: center;
+  justify-content: center;
+  font-family: "Bebas";
+  font-size: 24px;
+  margin: 25px;
+  width: vw;
+  height: vh;
+}
+
+.main_image {
+  align-items: center;
+  justify-content: center;
+  padding: 60px;
+  max-height: 600px;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.subtitle {
+  font-size: 25pt;
+  color: rgb(143, 143, 143);
+  align-items: center;
+  justify-content: center;
+  font-family: "Bebas";
+  padding: 50px;
+}
