--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -1,3 +1,7 @@
+html, body {
+  min-height: 100%;
+}
+
 @font-face {
   font-family: "Bebas";
   src: url("Fonts/BebasKai.ttf");
@@ -72,6 +76,7 @@ p {
   max-width: 600px;
   margin-left: auto;
   margin-right: auto;
+
 }
 
 .subtitle {
@@ -81,4 +86,19 @@ p {
   justify-content: center;
   font-family: "Bebas";
   padding: 50px;
+  margin: 0;
+  display: flex;
+}
+
+
+.canvas {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: fit-content;
+  height: fit-content;
+  position: absolute;
+  display: flex;
+  z-index: -100;
+  overflow: hidden;
 }
