--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -1,18 +1,5 @@
-html {
-  overflow-y: hidden;
-  overflow-x: hidden;
-}
-
 body {
   min-height: 100%;
-}
-
-.container {
-  -ms-overflow-style: none; /* Internet Explorer 10+ */
-  scrollbar-width: none; /* Firefox */
-}
-.container::-webkit-scrollbar {
-  display: none; /* Safari and Chrome */
 }
 
 @font-face {
@@ -28,32 +15,6 @@ body {
   justify-content: center;
   background-color: #000000;
   text-align: center;
-}
-
-button {
-  display: inline-block;
-  font-family: "Bebas";
-  background-color: WHITE;
-  border-radius: 45px;
-  border: 0px;
-  color: #000000;
-  text-align: center;
-  font-size: 20px;
-  padding: 10px;
-  width: 100px;
-  -webkit-transition: all 0.25s;
-  -moz-transition: all 0.25s;
-  -o-transition: all 0.25s;
-  transition: all 0.25s;
-  cursor: pointer;
-  margin: 5px;
-  text-decoration: none;
-}
-
-button:hover {
-  background-color: rgb(152, 152, 152);
-  text-decoration: none;
-  scale: +110%;
 }
 
 p {
@@ -119,3 +80,57 @@ p {
 }
 
 
+
+.enter_button {
+  display: inline-block;
+  font-family: "Bebas";
+  background-color: WHITE;
+  border-radius: 45px;
+  border: 0px;
+  color: #000000;
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  width: 80px;
+  -webkit-transition: all 0.25s;
+  -moz-transition: all 0.25s;
+  -o-transition: all 0.25s;
+  transition: all 0.25s;
+  cursor: pointer;
+  margin: 5px;
+  text-decoration: none;
+}
+
+.enter_button:hover {
+  background-color: rgb(152, 152, 152);
+  text-decoration: none;
+  scale: +110%;
+}
+
+.nav {
+  display: inline-block;
+  font-family: "Bebas";
+  color: WHITE;
+  border: 0px;
+  text-align: center;
+  font-size: 30px;
+  padding: 10px;
+  width: 120px;
+  -webkit-transition: all 0.25s;
+  -moz-transition: all 0.25s;
+  -o-transition: all 0.25s;
+  transition: all 0.25s;
+  cursor: pointer;
+  margin: 5px;
+  text-decoration: none;
+}
+
+.nav_home:hover {
+  color: rgb(152, 152, 152);
+  text-decoration: none;
+}
+
+.topnav {
+  justify-content: left;
+  
+}
