--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -79,8 +79,6 @@ p {
   height: 500%;
 }
 
-
-
 .enter_button {
   display: inline-block;
   font-family: "Bebas";
@@ -113,24 +111,39 @@ p {
   color: WHITE;
   border: 0px;
   text-align: center;
-  font-size: 30px;
-  padding: 10px;
-  width: 120px;
+  padding: 20px;
+  width: auto;
+  padding-top: 20px;
   -webkit-transition: all 0.25s;
   -moz-transition: all 0.25s;
   -o-transition: all 0.25s;
   transition: all 0.25s;
   cursor: pointer;
-  margin: 5px;
   text-decoration: none;
+  float: left;
+  font-size: calc(16px + 6 * ((100vw - 320px) / 680));
 }
 
-.nav_home:hover {
-  color: rgb(152, 152, 152);
-  text-decoration: none;
+.nav:hover {
+  color: rgba(170, 170, 170, 0.838);
+  scale: +110%;
 }
 
 .topnav {
-  justify-content: left;
-  
+  padding-left: 25px;
+  padding-right: 25px;
+  max-width: 1000px;
+  min-width: 500px;
+}
+
+.headerlogo {
+  height: calc(2vw * 5);
+  float: right;
+  padding-right: 25px;
+  fill: red;
+}
+
+.navbar {
+  padding-top: 30px;
+  max-height: 10px;
 }
